Add favicon e add botão de mostrar senha

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/icon.svg" type="image/svg">
     <link rel="stylesheet" href="style/style.css">
     <script src="/JavaScript/login.js" defer></script>
 
@@ -26,6 +27,7 @@
             <div class="textefild">
                 <label id="labelsenhalogin" for="usuario">Senha</label>
                 <input id="senhalogin" type="password" name="senha" placeholder="senha">
+                <img id ="mostrarsenha" src="img/eyeopen.svg" alt="olho pequeno">
             </div>
             <button id="button" class="btn-login">ENTRAR</button>
             <p>Não possui conta? cadastre-se<a href="pages/cadastro.html"> aqui</a></p>
