--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -24,7 +24,7 @@
 
     <header class="header">
 
-        <a href="#" class="logo"> TRAVELER </a>
+        <a href="homepage.html" class="logo"> TRAVELER </a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="buscar por destino" id="searchBox">
