Add marcadores de formato de senha

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -146,7 +146,7 @@
                 </div>
             </div> -->
         </div>
-        <div class="addAnnouncement" >
+        <div class="addAnnouncement">
             <i class="fas fa-plus" onclick="showAdd()"></i>
             <span class="tooltipe">Adicionar</span>
         </div>
@@ -155,8 +155,8 @@
                 <form action="" class="form-profile">
                     <div class="input-account">
                         <label>Nome do motorista</label>
-                        <input id="name" type="text" placeholder="Nome"  value="Alessandro Silva">
-                    </div>  
+                        <input id="name" type="text" placeholder="Nome" value="Alessandro Silva">
+                    </div>
                     <div class="input-account">
                         <label>Link de contato</label>
                         <input id="socialLink" type="text" placeholder="E-mail" value="/whatsapp.com">
@@ -201,27 +201,28 @@
 
     <section class="footer">
 
-    <div class="box-container">
+        <div class="box-container">
 
-        <div class="box" data-aos="fade-up">
-            <h3>Links Rápidos</h3>
-            <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
-            <a onclick="getAnnouncements()" href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
+            <div class="box" data-aos="fade-up">
+                <h3>Links Rápidos</h3>
+                <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
+                <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
+                <a onclick="getAnnouncements()" href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Ver
+                    Viagens </a>
+            </div>
+
+            <div class="box" data-aos="fade-up">
+                <h3>Sobre</h3>
+                <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
+            </div>
+
+
+
         </div>
 
-        <div class="box" data-aos="fade-up">
-            <h3>Sobre</h3>
-            <a href=""><i class="fas fa-chevron-right"></i> Nossa equipe</a>
-        </div>
+        <div class="credit"> created by <span>Traveler</span> | all rights reserved </div>
 
- 
-
-    </div>
-
-    <div class="credit"> created by <span>Traveler</span> | all rights reserved </div>
-
-</section> 
+    </section>
 
     <!-- footer section ends -->
 
