--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- custom css file cdn link  -->
     <link rel="stylesheet" href="/style/style.css">
-    
+
 </head>
 
 <body>
@@ -59,14 +59,15 @@
         <div class="container">
             <div class="profile">
                 <div class="profile-image" id="avatarUser">
-                    <img src="/img/space_cinematic.png" alt="" id="image">
+                    <img src="../img/profile-icon.jpg" alt="" id="image">
                     <label class="fas fa-image" for="picture_image" id="label_image_profile">
-                            <input type="file" onchange="updateImage()" accept="image/*" id="picture_image" class="fas fa-image"></input>
-                            <span class="tooltipe">Alterar Imagem</span>
+                        <input type="file" onchange="updateImage()" accept="image/*" id="picture_image"
+                            class="fas fa-image"></input>
+                        <span class="tooltipe">Alterar Imagem</span>
                     </label>
                 </div>
 
-                <h2>Alessandro Silva</h2>
+                <h2>Loren Ipsun</h2>
             </div>
 
             <div class="wrapper">
@@ -77,11 +78,11 @@
                 <form action="" class="form-profile">
                     <div class="input-account">
                         <label>Nome</label>
-                        <input type="text" placeholder="Nome"  value="Alessandro Silva">
+                        <input type="text" placeholder="Nome" value="User name">
                     </div>
                     <div class="input-account">
                         <label>E-Mail</label>
-                        <input type="text" placeholder="E-mail" value="teste2@gmail.com">
+                        <input type="text" placeholder="E-mail" value="user@email.com">
                     </div>
                     <div class="column">
                         <div class="input-account">
@@ -155,29 +156,30 @@
 
     <!-- footer section starts  -->
 
-     <section class="footer">
+    <section class="footer">
 
-    <div class="box-container">
+        <div class="box-container">
 
-        <div class="box" data-aos="fade-up">
-            <h3>Links Rápidos</h3>
-            <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
-            <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
-            <a onclick="getAnnouncements()" href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Ver Viagens </a>
+            <div class="box" data-aos="fade-up">
+                <h3>Links Rápidos</h3>
+                <a href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Inicio </a>
+                <a href="/pages/profilepage.html"> <i class="fas fa-chevron-right"></i> Perfil </a>
+                <a onclick="getAnnouncements()" href="/pages/homepage.html"> <i class="fas fa-chevron-right"></i> Ver
+                    Viagens </a>
+            </div>
+
+            <div class="box" data-aos="fade-up">
+                <h3>Sobre</h3>
+                <a href="/pages/about.html"><i class="fas fa-chevron-right"></i> Nossa equipe</a>
+            </div>
+
+
+
         </div>
 
-        <div class="box" data-aos="fade-up">
-            <h3>Sobre</h3>
-            <a href="/pages/about.html"><i class="fas fa-chevron-right"></i> Nossa equipe</a>
-        </div>
+        <div class="credit"> created by <span>Traveler</span> | all rights reserved </div>
 
- 
-
-    </div>
-
-    <div class="credit"> created by <span>Traveler</span> | all rights reserved </div>
-
-</section> 
+    </section>
 
     <!-- footer section ends -->
 
