corrigindo pequeno bug visual nas listas

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -32,7 +32,7 @@
                     <label id="labelSenha" for="senha">Senha</label>
                     <input id="senha" type="password" name="senha" placeholder="senha">
                     <div class="avisos">
-                        <ul>
+                        <ul class ="listadeavisos">
                             <li id="maiuscula">Pelo menos uma letra maiúscula</li>
                             <li id="especial">Pelo menos um caractere especial</li>
                             <li id="numero">Pelo menos um número</li>
