--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -45,7 +45,7 @@
         <div class="login-form">
             <a href="/pages/profilepage.html">Perfil</a>
             <a href="/pages/announcementpage.html">Minhas Viagens</a>
-            <a href="/index.html">Sair</a>
+            <a onclick="logout()" href="/index.html">Sair</a>
         </div>
 
 
