--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -78,11 +78,11 @@
                 <form action="" class="form-profile">
                     <div class="input-account">
                         <label>Nome</label>
-                        <input type="text" placeholder="Nome" value="User name">
+                        <input id ="username" type="text" placeholder="Nome" value="User name">
                     </div>
                     <div class="input-account">
                         <label>E-Mail</label>
-                        <input type="text" placeholder="E-mail" value="user@email.com">
+                        <input id ="useremail" type="text" placeholder="E-mail" value="user@email.com">
                     </div>
                     <div class="column">
                         <div class="input-account">
