--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -67,7 +67,7 @@
                     </label>
                 </div>
 
-                <h2 id = "userTitle">Loren Ipsun</h2>
+                <h2 id = "userTitle"></h2>
             </div>
 
             <div class="wrapper">
