Adicionando feature de excluir conta

--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -135,11 +135,11 @@
                             <p>Digite seu Email e Senha para confirmação de deletar conta.</p>
                             <div class="input-account">
                                 <label>E-Mail</label>
-                                <input type="text" placeholder="E-mail">
+                                <input id="emailDel" type="text" placeholder="E-mail">
                             </div>
                             <div class="input-account">
                                 <label>Senha Atual</label>
-                                <input type="password" placeholder="Senha">
+                                <input id ="passDel"type="password" placeholder="Senha">
                             </div>
                             <div class="buttons">
                                 <button class="yes">Sim</button>
