add imagem em modal de criação de anuncio

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,14 +37,13 @@
         <nav class="navbar">
             <a href="/pages/homepage.html">Inicio</a>
             <a onclick="getAnnouncements()" href="/pages/homepage.html">Viagens</a>
-            <a href="sobre.html">Ajuda</a>
-            <a href="sobre.html">Sobre Nós</a>
+            <a href="/pages/about.html">Sobre Nós</a>
         </nav>
 
 
         <div class="login-form">
             <a href="/pages/profilepage.html">Perfil</a>
-            <a href="">Criar Viagem</a>
+            <a href="/pages/about.html">Minhas Viagens</a>
             <a href="/index.html">Sair</a>
         </div>
 
