--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -69,7 +69,7 @@
 
         <div class="box-container" id="announcement">
 
-            <!-- <div class="box" data-aos="fade-up">
+            <div class="box" data-aos="fade-up">
                 <div class="image">
                     <img src="/img/carro 1.jpg" alt="">
                     <h3> <i class="fas fa-map-marker-alt"></i> Teresina </h3>
@@ -144,7 +144,7 @@
                     <div class="date">28/01/2023</div>
                     <a href="#" class="btn"> Acessar</a>
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="addAnnouncement">
             <i class="fas fa-plus" onclick="showAdd()"></i>
@@ -152,11 +152,12 @@
         </div>
         <div class="delete" id="formCreate">
             <div class="formAdd">
-                <form action="" class="form-profile">
-                    <!-- <div class="input-account">
-                        <label>Nome do motorista</label>
-                        <input id="name" type="text" placeholder="Nome" value="Alessandro Silva">
-                    </div> -->
+                <form action="" class="form-announcement">
+                   
+                    <div class="column-image">
+                        <img src="../img/profile-icon.jpg" alt="">
+                        <label>Inserir imagem</label>
+                    </div>
                     <div class="input-account">
                         <label>Link de contato</label>
                         <input id="socialLink" type="text" placeholder="Whatsapp: (99) 99999-9999">
