removendo coments e alterando nome de Sobre

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,45 +55,7 @@
 
 
 
-    <!-- <section class="about">
-        <h1 class="heading"> Sobre <span>Nós</span> </h1>
-
-        <div class="swiper-container about-slider" data-aos="zoom-in">
-
-            <div class="swiper-wrapper">
-
-                <div class="swiper-slide slide">
-                    <img src="/img/alessandro.jpeg" alt="">
-                    <h3>john deo</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur sunt eligendi est, dicta
-                        maiores amet nihil perferendis, incidunt maxime aspernatur exercitationem laboriosam odio
-                        dolores magnam ratione atque, quasi odit. Hic!</p>
-                </div>
-                <div class="swiper-slide slide">
-                    <img src="/img/anthony.jpeg" alt="">
-                    <h3>john deo</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur sunt eligendi est, dicta
-                        maiores amet nihil perferendis, incidunt maxime aspernatur exercitationem laboriosam odio
-                        dolores magnam ratione atque, quasi odit. Hic!</p>
-                </div>
-                <div class="swiper-slide slide">
-                    <img src="/img/sales.jpeg" alt="">
-                    <h3>john deo</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur sunt eligendi est, dicta
-                        maiores amet nihil perferendis, incidunt maxime aspernatur exercitationem laboriosam odio
-                        dolores magnam ratione atque, quasi odit. Hic!</p>
-                </div>
-                <div class="swiper-slide slide">
-                    <img src="/img/wesley.jpeg" alt="">
-                    <h3>john deo</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur sunt eligendi est, dicta
-                        maiores amet nihil perferendis, incidunt maxime aspernatur exercitationem laboriosam odio
-                        dolores magnam ratione atque, quasi odit. Hic!</p>
-                </div>
-            </div>
-            
-        </div>
-    </section> -->
+   
 
 
     <section class="review" id="review">
@@ -114,7 +76,7 @@
     
                 <div class="swiper-slide slide">
                     <img src="/img/anthony.jpeg" alt="">
-                    <h3>Anthnoy Irlan</h3>
+                    <h3>Anthony Irlan</h3>
                     <p>Estudante do Curso de ADS (Análise e Desenvolvimento de Sistemas) - Módulo 4 <br>
                         Desenvolvedor Frontend
                     </p>
