colocando value em inputs

--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -87,11 +87,11 @@
                     <div class="column">
                         <div class="input-account">
                             <label>Estado</label>
-                            <input type="text" placeholder="Estado">
+                            <input type="text" placeholder="Estado" value="PI">
                         </div>
                         <div class="input-account">
                             <label>Cidade</label>
-                            <input type="text" placeholder="Cidade">
+                            <input type="text" placeholder="Cidade" value="Picos">
                         </div>
                     </div>
                 </form>
