começando a colocar endereço origem e destino ao adicionar anuncio via cep

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -186,12 +186,54 @@
                     </div>
                     <div class="column">
                         <div class="input-account">
-                            <label>De onde</label>
-                            <input id="startRoute" type="text" placeholder="indo de...">
+                            <label>Cep do local de saída da viagem</label>
+                            <input id="startZipCode" type="text" placeholder="Cep origem">
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Cidade de origem</label>
+                            <input id="startCity" placeholder="Cidade origem" disabled>
                         </div>
                         <div class="input-account">
-                            <label>Para onde</label>
-                            <input id="endRoute" type="text" placeholder="para...">
+                            <label>Estado de origem</label>
+                            <input id="startState" placeholder="Estado origem" disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Rua de origem</label>
+                            <input id="startStreet" placeholder="Rua origem" disabled>
+                        </div>
+                        <div class="input-account">
+                            <label>Bairro de origem</label>
+                            <input id="startDistrict" placeholder="Bairro origem" disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Cep do local de chegada da viagem</label>
+                            <input id="endZipCode" type="text" placeholder="Cep destino" disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Cidade de destino</label>
+                            <input id="endCity" placeholder="Cidade destino" disabled>
+                        </div>
+                        <div class="input-account">
+                            <label>Estado de destino</label>
+                            <input id="endState" placeholder="Estado destino" disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Rua de destino</label>
+                            <input id="endStreet" placeholder="Rua destino" disabled>
+                        </div>
+                        <div class="input-account">
+                            <label>Bairro de destino</label>
+                            <input id="endDistrict" placeholder="Bairro destino" disabled>
                         </div>
                     </div>
                 </form>
