Integrando a pag de adicionar anuncio com a api de cep

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -154,40 +154,40 @@
             <div class="formAdd">
                 <form action="" class="form-announcement">
                    
-                    <div class="column-image">
+                    <!-- <div class="column-image">
                         <img src="../img/profile-icon.jpg" alt="">
                         <label id="label_image_announcement" for="picture_image" >Inserir imagem</label>
                         <input type="file" onchange="" accept="image/*" id="picture_image"
-                            class="fas fa-image"></input>
+                            class="fas fa-image" required></input>
                     </div>
                     <div class="input-account">
                         <label>Link de contato</label>
-                        <input id="socialLink" type="text" placeholder="Whatsapp: (99) 99999-9999">
+                        <input id="socialLink" type="text" placeholder="Whatsapp: (99) 99999-9999" required>
                     </div>
                     <div class="column">
                         <div class="input-account">
                             <label>Placa do veículo</label>
-                            <input id="licensePlate" type="text" placeholder="AAA0A00">
+                            <input id="licensePlate" type="text" placeholder="AAA0A00" required>
                         </div>
                         <div class="input-account">
                             <label>Marca do veículo</label>
-                            <input id="vehicle" type="text" placeholder="Honda">
+                            <input id="vehicle" type="text" placeholder="Honda" required>
                         </div>
                     </div>
                     <div class="column">
                         <div class="input-account">
                             <label>Valor</label>
-                            <input id="price" type="text" placeholder="Valor">
+                            <input id="price" type="text" placeholder="Valor" required>
                         </div>
                         <div class="input-account">
                             <label>Data</label>
-                            <input id="date" type="text" placeholder="Data">
+                            <input id="date" type="text" placeholder="Data" required>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="column">
                         <div class="input-account">
                             <label>Cep do local de saída da viagem</label>
-                            <input id="startZipCode" type="text" placeholder="Cep origem">
+                            <input id="startZipCode" type="text" placeholder="Cep origem" minlength="8" maxlength="8" required>
                         </div>
                     </div>
                     <div class="column">
@@ -212,8 +212,14 @@
                     </div>
                     <div class="column">
                         <div class="input-account">
+                            <label>Informe um ponto de referência (Campo não obrigatório)</label>
+                            <input id="startReferencePoint" placeholder="Próximo à(o)..." disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
                             <label>Cep do local de chegada da viagem</label>
-                            <input id="endZipCode" type="text" placeholder="Cep destino" disabled>
+                            <input id="endZipCode" type="text" placeholder="Cep destino" minlength="8" maxlength="8" required>
                         </div>
                     </div>
                     <div class="column">
@@ -234,6 +240,12 @@
                         <div class="input-account">
                             <label>Bairro de destino</label>
                             <input id="endDistrict" placeholder="Bairro destino" disabled>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="input-account">
+                            <label>Informe um ponto de referência (Campo não obrigatório)</label>
+                            <input id="endReferencePoint" placeholder="Próximo à(o)..." disabled>
                         </div>
                     </div>
                 </form>
