atualizando homepage com o novo tipo de endereço, por cep, dos anuncios

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -27,7 +27,7 @@
         <a href="homepage.html" class="logo"> TRAVELER </a>
 
         <form action="" class="search-form">
-            <input type="search" name="" placeholder="buscar por destino" id="searchBox">
+            <input type="search" name="" placeholder="buscar por cidade destino" id="searchBox">
             <label onclick="getMyAnnouncements()" for="searchBox" class="fas fa-search"></label>
         </form>
 
@@ -213,7 +213,7 @@
                     <div class="column">
                         <div class="input-account">
                             <label>Informe um ponto de referência (Campo não obrigatório)</label>
-                            <input id="startReferencePoint" placeholder="Próximo à(o)..." disabled>
+                            <input id="startReferencePoint" placeholder="Próximo à(o)...">
                         </div>
                     </div>
                     <div class="column">
@@ -245,7 +245,7 @@
                     <div class="column">
                         <div class="input-account">
                             <label>Informe um ponto de referência (Campo não obrigatório)</label>
-                            <input id="endReferencePoint" placeholder="Próximo à(o)..." disabled>
+                            <input id="endReferencePoint" placeholder="Próximo à(o)...">
                         </div>
                     </div>
                 </form>
