--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -27,7 +27,7 @@
         <a href="#" class="logo"> TRAVELER </a>
 
         <form action="" class="search-form">
-            <input type="search" name="" placeholder="buscar por destino" id="searchBox">
+            <input type="search" name="" placeholder="buscar por cidade destino" id="searchBox">
             <label onclick="getAnnouncements()" for="searchBox" class="fas fa-search"></label>
         </form>
 
@@ -80,13 +80,13 @@
         <form action="">
 
             <div class="inputBox">
-                <span>De onde</span>
-                <input id="filterStartRoute" type="text" placeholder="Saindo de...">
+                <span>Cidade de saída da viagem</span>
+                <input id="filterStartCity" type="text" placeholder="Saindo da cidade...">
             </div>
 
             <div class="inputBox">
-                <span>Para onde</span>
-                <input id="filterEndRoute" type="text" placeholder="Indo para...">
+                <span>Cidade de destino da viagem</span>
+                <input id="filterEndCity" type="text" placeholder="Indo para a cidade...">
             </div>
 
             <div class="inputBox">
