changing background image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1> Construa seus melhores momentos com TRAVELER!</h1>
-            <img class="img-viagens" src="img/viagens.svg" alt="">
+            <img class="img-viagens" src="img/traveling-animate.svg" alt="">
         </div>
         <div class="right-login">
             <div class="card-login">
