--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -15,7 +15,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Seus primeiros passos!</h1>
-            <img class="img-viagens" src="/img/viagens.svg" alt="">
+            <img class="img-viagens" src="/img/traveling-animate.svg" alt="">
         </div>
         <div class="right-login">
             <div class="card-login">
