--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
                 <div class="swiper-slide slide">
                     <img src="/img/alessandro.jpeg" alt="">
                     <h3>Alessandro Silva</h3>
-                    <p>Estudante do Curso de ADS (Análise e Desenvolvimento de Sistemas) - Módulo 4 <br>
+                    <p>Estudante do Curso de ADS (Análise e Desenvolvimento de Sistemas) <br>
                         Desenvolvedor Fullstack
                     </p>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="swiper-slide slide">
                     <img src="/img/wesley.jpeg" alt="">
                     <h3>Wesley Veloso</h3>
-                    <p>Estudante do Curso de ADS (Análise e Desenvolvimento de Sistemas) - Módulo 4 <br>
+                    <p>Estudante do Curso de ADS (Análise e Desenvolvimento de Sistemas) <br>
                         Desenvolvedor Backend
                     </p>
                 </div>
