adjust the ad page

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -154,7 +154,7 @@
             <div class="formAdd">
                 <form action="" class="form-announcement">
                    
-                    <!-- <div class="column-image">
+                    <div class="column-image">
                         <img src="../img/profile-icon.jpg" alt="">
                         <label id="label_image_announcement" for="picture_image" >Inserir imagem</label>
                         <input type="file" onchange="" accept="image/*" id="picture_image"
@@ -183,7 +183,7 @@
                             <label>Data</label>
                             <input id="date" type="text" placeholder="Data" required>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="column">
                         <div class="input-account">
                             <label>Cep do local de saída da viagem</label>
